duplicati/01-namespace.yaml
kind: Namespace
apiVersion: v1
metadata:
  name: duplicati
  labels:
    name: duplicati
